<?xml version="1.0" encoding="UTF-8" ?>
<resources>
    <string name="app_name">CS501App</string>
    <string name="btn_doCalc">do calc</string>
    <string name="label_op1">Op1</string>
    <string name="label_op2">Op2</string>
    <string name="label_op3">Operand:</string>
    <string name="btn_2_1">Goto 2.1</string>
    <string name="btn_2_2">GOTO 2.2</string>
    <string name="cal2_tv_msg_default">0</string>
    <string name="cal2_btn_1">1</string>
    <string name="cal2_btn_2">2</string>
    <string name="cal2_btn_3">3</string>
    <string name="cal2_btn_plus">+</string>
    <string name="cal2_btn_multi">*</string>
    <string name="cal2_btn_4">4</string>
    <string name="cal2_btn_5">5</string>
    <string name="cal2_btn_6">6</string>
    <string name="cal2_btn_sub">-</string>
    <string name="cal2_btn_div">/</string>
    <string name="cal2_btn_7">7</string>
    <string name="cal2_btn_8">8</string>
    <string name="cal2_btn_9">9</string>
    <string name="cal2_btn_sqrt">sqrt</string>
    <string name="cal2_btn_0">0</string>
    <string name="cal2_btn_point">.</string>
    <string name="cal2_btn_equals">=</string>
    <string name="cal2_btn_mod">mod</string>
    <string name="cal2_btn_ac">ac</string>
    <string name="cal2_btn_del">del</string>
    <string name="btn_3_1">GOTO 3.1</string>
    <string name="btn_3_2">GOTO 3.2</string>
    <string name="btn_3_3">GOTO 3.3</string>
    <string name="Celcius">Calcius</string>
    <string name="Fahrenheit">Fahrenheit</string>
    <string name="fc_name">Please input your name(admin)</string>
    <string name="fc_psw">Please input your password(123456)</string>

    <string name="question_australia">Canberra is the capital of Australia.</string>
    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon River is the longest river in the Americas.</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest freshwater lake.</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="next_button">Next</string>
    <string name="previous_button">Previous</string>
    <string name="first_question_alert">This is question 1, You can not to previous page!</string>
    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="cheat_button">Cheat!</string>
    <string name="judgment_toast">Cheating is wrong.</string>

    <string name="crime_title_hint">Enter a title for the crime.</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>
    <string name="crime_require_police">Require Police</string>

    <string name="hangman_choose_letter_title_label">CHOOSE A LETTER</string>
    <string name="hangman_hint_label">Hint:</string>
    <string name="hangman_btn_a">A</string>
    <string name="hangman_btn_b">B</string>
    <string name="hangman_btn_c">C</string>
    <string name="hangman_btn_d">D</string>
    <string name="hangman_btn_e">E</string>
    <string name="hangman_btn_f">F</string>
    <string name="hangman_btn_g">G</string>
    <string name="hangman_btn_h">H</string>
    <string name="hangman_btn_i">I</string>
    <string name="hangman_btn_j">J</string>
    <string name="hangman_btn_k">K</string>
    <string name="hangman_btn_l">L</string>
    <string name="hangman_btn_m">M</string>
    <string name="hangman_btn_n">N</string>
    <string name="hangman_btn_o">O</string>
    <string name="hangman_btn_p">P</string>
    <string name="hangman_btn_q">Q</string>
    <string name="hangman_btn_r">R</string>
    <string name="hangman_btn_s">S</string>
    <string name="hangman_btn_t">T</string>
    <string name="hangman_btn_u">U</string>
    <string name="hangman_btn_v">V</string>
    <string name="hangman_btn_w">W</string>
    <string name="hangman_btn_x">X</string>
    <string name="hangman_btn_y">Y</string>
    <string name="hangman_btn_z">Z</string>

    <string name="boggle_guide">Enter a word then hit</string>
    <string name="boggle_input">Your Input</string>
    <string name="boggle_score">SCORE: </string>
    <string name="boggle_current_score">Your current score</string>
    <string name="boggle_clear">CLEAR</string>
    <string name="boggle_submit">SUBMIT</string>
    <string name="boggle_new_game">NEW GAME</string>

    <string name="delete">Delete</string>
    <string name="event_priority">event_priority</string>
    <string name="high_priority">HIGH</string>
    <string name="medium_priority">MID</string>
    <string name="low_priority">LOW</string>
    <string name="event_app_name">Event_Tracker</string>
    <string name="add_event">Add event</string>
    <string name="bottom_sheet_headline">Edit your event</string>
    <string name="event_name">Event Name</string>
    <string name="event_description">Event Description</string>
    <string name="priority">Event Priority</string>
    <string name="cancel">CANCEL</string>
    <string name="save">SAVE</string>
    <string name="event_start_time">Start time</string>
    <string name="language_change_success">Language change success</string>
    <string name="server_client_id" translatable="false">535824934955-4qkrgeoin624iegcc7upt3f88pkcle3f.apps.googleusercontent.com</string>
    <string name="location" translatable="false">Location</string>


    <string name="sync_data">Sync Data</string>
    <string name="language">Language</string>
    <string name="sync">Sync</string>
    <string name="nologon">No Logon</string>
    <string name="settings">Settings</string>
    <string name="importfrom">Import from Student Link</string>
    <string name="edit_user_info">Edit user info</string>
    <string name="register_login">Login/register</string>
    <string name="logout">logout</string>
    <string name="please_login">Please log in first</string>
    <string name="user_update">User info updated</string>

    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="save_2">Save</string>
    <string name="mygroup_invites">My Group Invites</string>
    <string name="group">Group</string>
    <string name="invited_by">Invited by</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="user_email">User Email</string>
    <string name="enter_user_email">Enter User Email</string>
    <string name="study_group">Study Groups</string>
    <string name="group_name">Group Name</string>
    <string name="group_description">Group Description</string>
    <string name="group_created">Group Created By</string>
    <string name="group_member">Group members</string>
    <string name="group_invites">Group Invites</string>
    <string name="group_info">Group Info</string>
    <string name="creator">Creator</string>
    <string name="no_group_found">No groups found</string>
    <string name="create_group">Create group</string>
    <string name="join_group">Join group</string>
    <string name="create_a_group">Create a study group</string>
    <string name="create">Create</string>
    <string name="send_invites">Send Invites</string>

    <string name="past">Past</string>
    <string name="today">Today</string>
    <string name="future">Future</string>
    <string name="no_such_events">No Such Events</string>
    <string name="show_shared">Show shared events</string>
    <string name="event_position">Event Position</string>
    <string name="time_slot">Time Slot</string>
    <string name="priority_name">Priority</string>
    <string name="empty_event">Empty Event</string>
    <string name="empty_desc">Empty Event Description</string>
    <string name="take_attendence">Take Attendance</string>
    <string name="view_participant" translatable="false">View Participants</string>
    <string name="import_members">Import Study Group Members</string>
    <string name="import_members_2">Import Group Members</string>
    <string name="group_id">Group Id</string>
    <string name="no_shared_event_found">No SharedEvents found</string>
    <string name="shared_events">Shared  Events</string>
    <string name="create_shared_event">Create SharedEvent</string>
    <string name="create_a_shared_event">Create a Shared Event</string>
    <string name="shared_event_name">Shared Event Name</string>
    <string name="shared_event_desc">Shared Event Description</string>

    <string name="pick_a_start">Please pick a start time</string>
    <string name="pick_a_end">Please pick an end time</string>
    <string name="select_start">Select start time</string>
    <string name="select_end">Select end time</string>

    <string name="cd_button_send">Send</string>
    <string name="settings_misc">Misc</string>

    <string name="type_student">Student</string>
    <string name="type_teacher">Teacher</string>
    <string name="bg_svc_toggle">Background Service</string>
    <string name="poll_toggle">Polling</string>
    <string name="drawer_home">Home</string>
    <string name="drawer_setup">Setup</string>
    <string name="drawer_group">Study Group</string>
    <string name="drawer_map">Campus Map</string>
    <string name="drawer_invite">Invite</string>
    <string name="drawer_chat">Chat Room</string>
    <string name="drawer_setting">Settings</string>
    <string name="no_repeat">No repeat</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="repeat_mode">Repeat Mode</string>
    <string name="location_not_ok">Invalid location</string>
</resources>